[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Bar.gd" type="Script" id=1]
[ext_resource path="res://Assets/Cenario/SideA.png" type="Texture" id=2]
[ext_resource path="res://Assets/Cenario/SideB.png" type="Texture" id=3]
[ext_resource path="res://Assets/Components/Pause.png" type="Texture" id=4]
[ext_resource path="res://Assets/Musics/Lovable_Clown.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Cenario/Background.png" type="Texture" id=6]
[ext_resource path="res://Assets/Components/EndBar.png" type="Texture" id=7]
[ext_resource path="res://Assets/Components/TimeBar.png" type="Texture" id=8]
[ext_resource path="res://Assets/Components/Play.png" type="Texture" id=9]
[ext_resource path="res://Assets/Components/FoodBg.png" type="Texture" id=10]
[ext_resource path="res://Assets/Font/soupofjustice.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Scripts/PauseButton.gd" type="Script" id=12]
[ext_resource path="res://Scripts/LevelManager.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=1]
size = 80
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=2]
size = 60
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=3]
size = 90
use_filter = true
font_data = ExtResource( 11 )

[node name="Game" type="Node"]
script = ExtResource( 12 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( -29, -146.209 )
scale = Vector2( 1.007, 1.185 )
texture = ExtResource( 6 )
centered = false

[node name="SideA" type="Sprite" parent="."]
position = Vector2( 292.409, 399.998 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="SideB" type="Sprite" parent="."]
position = Vector2( 987.59, 399.978 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )

[node name="PauseButton" type="TouchScreenButton" parent="."]
position = Vector2( 1110.22, 21 )
normal = ExtResource( 4 )

[node name="GameSoundtrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Bar" type="Node2D" parent="."]
position = Vector2( 640, 88.157 )
script = ExtResource( 1 )

[node name="Base" type="Sprite" parent="Bar"]
texture = ExtResource( 7 )

[node name="Marker" type="Sprite" parent="Bar"]
position = Vector2( -239.024, -22 )
scale = Vector2( 1.177, 1.053 )
texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 408, 42 )

[node name="BarTimer" type="Timer" parent="Bar"]
wait_time = 1.5
one_shot = true

[node name="Level" type="Node" parent="."]
script = ExtResource( 13 )

[node name="LevelBackground" type="Sprite" parent="Level"]
modulate = Color( 1, 1, 1, 0.82 )
position = Vector2( 120, 132.241 )
scale = Vector2( 0.8, 0.75 )
texture = ExtResource( 10 )
centered = false

[node name="Control" type="Control" parent="Level"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ObjectiveTitle" type="Label" parent="Level/Control"]
margin_left = 404.0
margin_top = 262.0
margin_right = 877.0
margin_bottom = 349.0
size_flags_horizontal = 4
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="ObjectiveText" type="RichTextLabel" parent="Level/Control"]
margin_left = 172.0
margin_top = 369.0
margin_right = 1858.0
margin_bottom = 519.0
rect_scale = Vector2( 0.55, 0.55 )
mouse_filter = 2
size_flags_horizontal = 4
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
fit_content_height = true

[node name="ConfirmButton" type="TouchScreenButton" parent="Level/Control"]
visible = false
position = Vector2( 443, 482 )
normal = ExtResource( 9 )

[node name="ButtonText" type="Label" parent="Level/Control/ConfirmButton"]
margin_left = 14.21
margin_top = 38.0031
margin_right = 893.21
margin_bottom = 129.003
rect_scale = Vector2( 0.4, 0.4 )
size_flags_horizontal = 4
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
text = "Clique para iniciar"
align = 1
valign = 1

[node name="ControlTimer" type="Timer" parent="Level/Control"]
one_shot = true

[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="timeout" from="Bar/BarTimer" to="Bar" method="_on_BarTimer_timeout"]
[connection signal="pressed" from="Level/Control/ConfirmButton" to="Bar" method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="Level/Control/ConfirmButton" to="Level" method="_on_ConfirmButton_pressed"]
[connection signal="timeout" from="Level/Control/ControlTimer" to="Level" method="_on_ControlTimer_timeout"]
